--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
 <!-- Head holds information about the webpage and how to display-->
     <head>
@@ -20,8 +19,8 @@
         <h3>Publications</h3>
         <ul>
             <li><a href="https://api.shareaction.org/resources/reports/ShareAction-Paris-Alignment-Report-2021.pdf">Paris-alignment methodologies for banks</a></li>
-            <li>Countdown to COP26</li>
-            <li>Oil & gas expansion</li>
+            <li>XXXX</li>
+            <li>XXXX</li>
         </ul>
         <hr>
         <h3>Work Experience</h3>
@@ -32,11 +31,11 @@
             </thead>
             <tr>
                 <td>2017-2019</td>
-                <td>Corporate Coverage Associate at BNP Paribas</td>
+                <td>XXXX</td>
             </tr>
             <tr>
                 <td>2017</td>
-                <td>Professional surfer at WSL</td>
+                <td>XXXX</td>
             </tr>
         </table>
         <hr>
